# role-escalation-checker

./: .gitattributes  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
bacscan/: __init__.py  __main__.py  auth.py  capture.py  cli.py  config.py  engine.py  harvest.py  http.py  ingest.py  oracles.py  redact.py  report.py  static_link.py  suggest.py  triage.py  watch.py
bacscan/plugins/: __init__.py  declarative.py  role_escalation.py
bacscan/probes/: __init__.py  bfla.py  bopla.py  graphql.py  idor.py  idor_dynamic.py  leakage.py
docs/: ARCHITECTURE.md  FIELD-TEST-juiceshop.md  FIELD-TEST-vampi.md  SPEC-assisted-capture.md
examples/: engagement.example.yaml
tests/: mock_server.py  run_checks.py  test_advanced.py  test_capture_har.py  test_dedup.py  test_e2e.py  test_excessive.py  test_finding_tiers.py  test_graphql_bfla.py  test_hardening.py  test_idheur.py  test_perf.py  test_suggest.py  test_triage.py  test_watch.py
tools/: check_role_escalation.py
